fixed missing content from html tags

--- a/spotsight/src/main/resources/templates/index.html
+++ b/spotsight/src/main/resources/templates/index.html
@@ -8,8 +8,8 @@
 <body>
     <h1>Spotify Insights</h1>
     <ul>
-        <li><a href="/authenticate"></a></li>
-        <li><a href="/user-profile"></a></li>
+        <li><a href="/authenticate"> Authenticate </a></li>
+        <li><a href="/user-profile"> Get User Profile </a></li>
     </ul>
 </body>
 </html>
