--- a/spotsight/src/main/resources/templates/authenticate.html
+++ b/spotsight/src/main/resources/templates/authenticate.html
@@ -9,6 +9,6 @@
     <h1>Authenticate User</h1>
 
     <p>Please go to the following URL to authorize user: </p>
-    <a href="${authUrl}">${authUrl}</a>
+    <a th:href="${authUrl}">[[${authUrl}]]</a>
 </body>
 </html>
