added link to top artists

--- a/spotsight/src/main/resources/templates/index.html
+++ b/spotsight/src/main/resources/templates/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Spotify Insights</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Spotify Insights</h1>
     <ul>
-        <li><a href="/authenticate"> Authenticate </a></li>
-        <li><a href="/user-profile"> Get User Profile </a></li>
+      <li><a href="/authenticate"> Authenticate </a></li>
+      <li><a href="/user-profile"> Get User Profile </a></li>
+      <li><a href="/top-artists"> Get Top Artists</a></li>
     </ul>
-</body>
+  </body>
 </html>
