fixed error with th each syntax on top-artists.html

--- a/spotsight/src/main/resources/templates/top-artists.html
+++ b/spotsight/src/main/resources/templates/top-artists.html
@@ -30,7 +30,7 @@
         <p th:if="${error != null}" style="color : red;">Error: <span th:text="${error}"></span></p>
 
         <ul th:if="${artists != null}">
-            <li th:each=" "artist : ${artists}></li>
+            <li th:each="artist : ${artists}"></li>
             <strong th:text="${artist.name}"></strong>
         </ul>
     </div>
