--- a/spotsight/src/main/resources/templates/index.html
+++ b/spotsight/src/main/resources/templates/index.html
@@ -11,6 +11,7 @@
       <li><a href="/authenticate"> Authenticate </a></li>
       <li><a href="/user-profile"> Get User Profile </a></li>
       <li><a href="/top-artists"> Get Top Artists</a></li>
+      <li><a href="/top-tracks"> Get Top Artists</a></li>
     </ul>
   </body>
 </html>
